[gd_scene load_steps=11 format=3 uid="uid://bk2a1lbtl22lg"]

[ext_resource type="Script" uid="uid://bbkh85uan0nok" path="res://scenes/bosses/basic_earth_asteroid.gd" id="1_rv6v6"]
[ext_resource type="AudioStream" uid="uid://0lw4aw43bv3o" path="res://assets/sound_effects 2.0/others/boss_explosion.mp3" id="2_m2826"]
[ext_resource type="Texture2D" uid="uid://xk36yl4dprr6" path="res://assets/pngs/health_bar_under.png" id="2_rv6v6"]
[ext_resource type="Texture2D" uid="uid://bveke7f8co1c3" path="res://assets/pngs/health_bar_progress.png" id="3_byjdk"]
[ext_resource type="AudioStream" uid="uid://dje4so67i0do" path="res://assets/sound_effects/others/collision_impact.mp3" id="3_nbt0u"]
[ext_resource type="Script" uid="uid://sjxqn0uaap86" path="res://scenes/game/healthbar.gd" id="4_m2826"]
[ext_resource type="PackedScene" uid="uid://is6j1jsjuhjs" path="res://assets/Custom Assets/Asteriods Use/Brute Asteroid.glb" id="6_byjdk"]

[sub_resource type="Curve" id="Curve_yewmm"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.818182, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_atjha"]
offsets = PackedFloat32Array(0, 0.061643835, 0.1369863, 0.23287672, 1)
colors = PackedColorArray(0.80724424, 0.007243437, 5.7756904e-07, 1, 0.976757, 0.27059987, 0, 1, 0.83100665, 0.3402905, 0, 1, 0.7067446, 0.5131617, 0.29398897, 1, 0.41568628, 0.38431373, 0.33333334, 1)

[sub_resource type="Curve" id="Curve_3sceu"]
_data = [Vector2(0.05232559, 1), 0.0, 0.0, 0, 0, Vector2(0.8546512, 0.15730345), 0.0, 0.0, 0, 0]
point_count = 2

[node name="BasicEarthAsteroid" type="Area2D" groups=["Asteroids", "Boss"]]
z_index = 5
collision_layer = 2
collision_mask = 8
script = ExtResource("1_rv6v6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(27, -334, 427, -333, 625, -261, 715, -90, 725, 6, 678, 113, 423, 257, 82, 364, -129, 382, -273, 337, -448, 236, -630, 125, -727, -68, -760, -117, -745, -230, -571, -306)

[node name="Effects" type="Node2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="Effects"]
emitting = false
amount = 500
lifetime = 2.0
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 100.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 400.0
initial_velocity_max = 500.0
scale_amount_min = 4.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_yewmm")
color_ramp = SubResource("Gradient_atjha")

[node name="EffectTimer" type="Timer" parent="Effects"]
wait_time = 2.0

[node name="Explosion_Sound" type="AudioStreamPlayer2D" parent="Effects"]
stream = ExtResource("2_m2826")
volume_db = -2.0
bus = &"SFX"

[node name="CollisionParticles" type="CPUParticles2D" parent="Effects"]
z_index = 10
position = Vector2(0, 250)
emitting = false
amount = 100
lifetime = 0.75
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 150.0
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_3sceu")
color = Color(0.6862745, 0.67058825, 0.6627451, 1)

[node name="CollisionSound" type="AudioStreamPlayer2D" parent="Effects"]
stream = ExtResource("3_nbt0u")
volume_db = 5.05
bus = &"SFX"

[node name="Healthbar" type="TextureProgressBar" parent="."]
z_index = 1
texture_filter = 1
offset_left = -649.0
offset_top = 18.0
offset_right = 650.0
offset_bottom = 58.0
nine_patch_stretch = true
texture_under = ExtResource("2_rv6v6")
texture_progress = ExtResource("3_byjdk")
script = ExtResource("4_m2826")

[node name="AsteroidTimer" type="Timer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
clip_contents = true
offset_left = -829.0
offset_top = -383.0
offset_right = -308.0
offset_bottom = 134.0
scale = Vector2(3.31, 1.5)

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.832892, 0.553435, 0, -0.553435, 0.832892, 0, 2.51145, 3.84562)
cull_mask = 2

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.903769, 0.42802, 0, -0.42802, 0.903769, 0, 2.53931, 4.68907)
layers = 2

[node name="Earth Asteroid" parent="SubViewportContainer/SubViewport" instance=ExtResource("6_byjdk")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Effects/EffectTimer" to="." method="_on_effect_timer_timeout"]
[connection signal="health_depleted" from="Healthbar" to="." method="_on_healthbar_health_depleted"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_asteroid_timer_timeout"]
